--- a/src/styles/components/search.scss
+++ b/src/styles/components/search.scss
@@ -15,11 +15,14 @@
   }
 
   &__input {
+    border: none;
+    border-radius: unset;
+    box-shadow: unset;
+
     width: 100%;
     color: $--color-text-contrast-600;
     background-color: transparent;
     padding: 8px 0;
-    border: none;
 
     font-weight: 300;
     font-size: 3vmax;
